--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "konsulting/spatie-laravel-dashboard": "^0.1.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0"
     },
@@ -42,7 +43,8 @@
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
-        ]
+        ],
+        "laravel-echo-server": "laravel-echo-server start"
     },
     "config": {
         "preferred-install": "dist",
